crear menu para internet explorer

--- a/css/style.css
+++ b/css/style.css
@@ -212,23 +212,45 @@ body{
 }
 #menu-altern ul li
 {
-	list-style:none;
-	display:inline;
-	float:left;
-	width:140px;
-	height:35px;
-	line-height:35px;
-	background:#666;
-	cursor:pointer;
-	border-right:1px solid #999;
-	z-index:999;
+ margin: 0;
+ border: 0 none;
+ padding: 0;
+ float: left; /*For Gecko*/
+ display: inline;
+ list-style: none;
+ position: relative;
+ height: 24px;
+ background-color:#666; /* agregu? este color para que rellene el menu con color vino*/
+ width: 110px;
+ font-size:12px;
+ z-index:1; /*Agregu? regla para que el men? se presente sobre cualquier elemento del contenido*/
 }
 
-#menu-altern ul li ul {
-list-style:none;
-	display:none;
+#menu-altern ul  ul {
+  margin: 0;
+  border: 0 none;
+  padding: 0;
+  width: 250px;
+  list-style: none;
+  display: none;
+  position: absolute;
+  top: 0px;
+  left: 0;
 }
-
+#menu-altern ul ul:after{
+  clear: both;
+  display: block;
+  font: 1px/0px serif;
+  content: ".";
+  height: 0;
+  visibility: hidden;
+}
+#menu-altern ul ul li {
+	width: 150px; /* Tama?o de la celdas del submenu*/
+  	float: left; /*For IE 7 lack of compliance*/
+  	display: block !important;
+  	display: inline; /*For IE*/
+}
 
 
 /*=====================Imagenes Trans================================*/
